[package]
edition = "2021"
name = "express-bridge-exec"
version = "0.1.0"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[dependencies]
alpen-express-btcio.workspace = true
alpen-express-primitives.workspace = true
alpen-express-rpc-api = { workspace = true, features = ["client"] }
alpen-express-rpc-types.workspace = true
borsh.workspace = true
express-bridge-sig-manager.workspace = true
express-bridge-tx-builder.workspace = true

bitcoin = { workspace = true, features = ["rand-std"] }
format_serde_error.workspace = true
jsonrpsee.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
