[package]
edition = "2021"
name = "alpen-express-bridge-relay"
version = "0.1.0"

[dependencies]
alpen-express-btcio = { workspace = true }
alpen-express-primitives = { workspace = true }
alpen-express-state = { workspace = true }
alpen-express-status = { workspace = true }
express-storage = { workspace = true }

anyhow = { workspace = true }
bitcoin = { workspace = true }
secp256k1 = { workspace = true, features = ["rand-std"] }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
alpen-test-utils = { workspace = true }
