[package]
edition = "2021"
name = "strata-bridge-relay"
version = "0.1.0"

[dependencies]
strata-btcio = { workspace = true }
strata-primitives = { workspace = true }
strata-state = { workspace = true }
strata-status = { workspace = true }
strata-storage = { workspace = true }
strata-tasks = { workspace = true }

anyhow = { workspace = true }
bitcoin = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
test-utils = { workspace = true }
