[package]
name = "express-bridge-sig-manager"
version = "0.1.0"
edition = "2021"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.unused_crate_dependencies = "deny"
rustdoc.all = "warn"

[dependencies]
alpen-express-primitives = { workspace = true }
express-bridge-tx-builder = { workspace = true }

bitcoin = { workspace = true, features = ["rand-std"] }
serde = { workspace = true }
thiserror = { workspace = true }
