[package]
edition = "2021"
name = "strata-bridge-sig-manager"
version = "0.1.0"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[dependencies]
strata-db.workspace = true
strata-primitives.workspace = true
strata-storage.workspace = true

bitcoin = { workspace = true, features = ["rand-std"] }
musig2.workspace = true
rand_core.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
arbitrary.workspace = true
strata-bridge-tx-builder.workspace = true
strata-test-utils.workspace = true
tokio.workspace = true
