[package]
edition = "2021"
name = "express-bridge-tx-builder"
version = "0.1.0"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[dependencies]
alpen-express-primitives = { workspace = true }

bitcoin = { workspace = true, features = ["rand-std"] }
lazy_static = { workspace = true }
musig2 = { workspace = true, features = ["serde"] }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
alpen-test-utils = { workspace = true }
