[package]
edition = "2021"
name = "strata-btcio"
version = "0.1.0"

[dependencies]
strata-bridge-tx-builder.workspace = true
strata-common.workspace = true
strata-db.workspace = true
strata-primitives.workspace = true
strata-rpc-types.workspace = true
strata-state.workspace = true
strata-status.workspace = true
strata-storage.workspace = true
strata-tasks.workspace = true

anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bitcoin.workspace = true
borsh.workspace = true
bytes.workspace = true
hex.workspace = true
musig2 = { workspace = true, features = ["serde"] }
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
strata-tx-parser.workspace = true
thiserror.workspace = true
threadpool.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
arbitrary.workspace = true
bitcoind.workspace = true
mockall.workspace = true
strata-common.workspace = true
strata-rocksdb = { workspace = true, features = ["test_utils"] }
strata-test-utils.workspace = true

[features]
test_utils = []
