[package]
edition = "2021"
name = "strata-btcio"
version = "0.1.0"

[dependencies]
strata-config.workspace = true
strata-db.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true
strata-status.workspace = true
strata-storage.workspace = true
strata-tasks.workspace = true

anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bitcoin.workspace = true
hex.workspace = true
musig2 = { workspace = true, features = ["serde"] }
rand.workspace = true
reqwest.workspace = true
secp256k1 = { workspace = true, features = ["rand-std"] }
serde.workspace = true
serde_json.workspace = true
strata-l1tx.workspace = true
thiserror.workspace = true
threadpool.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
strata-common.workspace = true
strata-rocksdb = { workspace = true, features = ["test_utils"] }
strata-state = { workspace = true, features = ["test_utils"] }
strata-status.workspace = true
strata-test-utils.workspace = true

corepc-node = { version = "0.4.0", features = ["28_0"] }

[features]
test_utils = []

[lints]
rust.unused_crate_dependencies = "deny"
