[package]
edition = "2021"
name = "strata-btcio"
version = "0.2.0"

[dependencies]
strata-config.workspace = true
strata-db.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true
strata-status.workspace = true
strata-storage.workspace = true
strata-tasks.workspace = true

anyhow.workspace = true
bitcoin.workspace = true
bitcoind-async-client.workspace = true
borsh.workspace = true
hex.workspace = true
musig2 = { workspace = true, features = ["serde"] }
rand.workspace = true
reqwest.workspace = true
secp256k1 = { workspace = true, features = ["rand-std"] }
strata-l1tx.workspace = true
thiserror.workspace = true
threadpool.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
borsh.workspace = true
strata-common.workspace = true
strata-rocksdb = { workspace = true, features = ["test_utils"] }
strata-l1tx = { workspace = true, features = ["test_utils"] }
strata-state = { workspace = true, features = ["test_utils"] }
strata-status.workspace = true
strata-test-utils.workspace = true

arbitrary.workspace = true
corepc-node = { version = "0.7.1", features = ["28_0", "download"] }
mockall.workspace = true

[features]
test_utils = []
