[package]
edition = "2021"
name = "express-chaintsn"
version = "0.1.0"

[dependencies]
alpen-express-btcio = { workspace = true }
alpen-express-eectl = { workspace = true }
alpen-express-primitives = { workspace = true }
alpen-express-state = { workspace = true }

anyhow = { workspace = true }
bitcoin = { workspace = true }
borsh = { workspace = true }
rand_chacha = { workspace = true, default-features = false }
rand_core = { workspace = true, default-features = false }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
alpen-test-utils = { workspace = true }
arbitrary = { workspace = true }


[features]
default = ["fullstd"]
fullstd = ["dep:tracing"]
