[package]
edition = "2021"
name = "express-chaintsn"
version = "0.1.0"

[dependencies]
alpen-express-primitives = { workspace = true }
alpen-express-state = { workspace = true }

rand_core = { workspace = true, default-features = false }
rand_chacha = { workspace = true, default-features = false }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

[features]
default = ["fullstd"]
fullstd = ["dep:tracing"]
