[package]
edition = "2024"
name = "strata-component"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
strata-common.workspace = true
strata-db.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true
strata-status.workspace = true
strata-storage.workspace = true
strata-tasks.workspace = true
threadpool.workspace = true
tokio.workspace = true
tracing.workspace = true
