[package]
edition = "2021"
name = "strata-consensus-logic"
version = "0.1.0"

[dependencies]
strata-btcio = { workspace = true }
strata-chaintsn = { workspace = true }
strata-crypto = { workspace = true, default-features = true }
strata-db = { workspace = true }
strata-eectl = { workspace = true }
strata-primitives = { workspace = true }
strata-rpc-types = { workspace = true }
strata-state = { workspace = true }
strata-status = { workspace = true }
strata-storage = { workspace = true }
strata-tasks = { workspace = true }

anyhow = { workspace = true }
bitcoin = { workspace = true }
borsh = { workspace = true }
futures = { workspace = true }
secp256k1 = { workspace = true, features = ["rand-std"] }
thiserror = { workspace = true }
threadpool = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
strata-db = { workspace = true, features = ["stubs"] }
strata-rocksdb = { workspace = true, features = ["test_utils"] }
test-utils = { workspace = true }
rand = { version = "0.8.5", features = ["getrandom", "std_rng"] }
