[package]
edition = "2021"
name = "strata-crypto"
version = "0.1.0"

[dependencies]
strata-primitives.workspace = true

secp256k1.workspace = true
sha2.workspace = true


[dev-dependencies]
rand_core.workspace = true
rand.workspace = true

[features]
default = ["rand"]
rand = ["secp256k1/rand-std"]
