[package]
edition = "2021"
name = "strata-crypto"
version = "0.1.0"

[dependencies]
strata-primitives.workspace = true

secp256k1.workspace = true
sha2.workspace = true
zkaleido.workspace = true
zkaleido-native-adapter.workspace = true
zkaleido-risc0-adapter.workspace = true
zkaleido-sp1-adapter.workspace = true

[dev-dependencies]
rand = { version = "0.8.5", features = ["getrandom", "std_rng"] }

[features]
default = ["rand"]
rand = ["secp256k1/rand-std"]
