[package]
edition = "2021"
name = "alpen-express-db"
version = "0.1.0"

[dependencies]
alpen-express-mmr = { workspace = true }
alpen-express-primitives = { workspace = true }
alpen-express-state = { workspace = true }
express-zkvm = { workspace = true }

anyhow = { workspace = true }
arbitrary = { workspace = true }
bitcoin = { workspace = true }
borsh = { workspace = true }
hex = { workspace = true }
mockall = { workspace = true, optional = true }
musig2 = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = []
mocks = ["mockall"]
stubs = []

[dev-dependencies]
alpen-test-utils = { workspace = true }
serde_json = { workspace = true }
