[package]
edition = "2021"
name = "strata-db"
version = "0.1.0"

[dependencies]
strata-mmr.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true
zkaleido.workspace = true

anyhow.workspace = true
arbitrary.workspace = true
bitcoin.workspace = true
borsh.workspace = true
hex.workspace = true
mockall = { workspace = true, optional = true }
musig2.workspace = true
parking_lot.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
default = []
mocks = ["mockall"]
stubs = []

[dev-dependencies]
serde_json.workspace = true
strata-test-utils.workspace = true
