[package]
edition = "2021"
name = "strata-evmexec"
version = "0.1.0"

[dependencies]
strata-db.workspace = true
strata-eectl.workspace = true
strata-primitives.workspace = true
strata-reth-evm.workspace = true
strata-reth-node.workspace = true
strata-state.workspace = true
strata-storage.workspace = true

anyhow.workspace = true
arbitrary.workspace = true
borsh.workspace = true
futures.workspace = true
http.workspace = true
hyper.workspace = true
jsonrpsee = { workspace = true, features = ["jsonrpsee-http-client"] }
reth-node-ethereum.workspace = true
reth-primitives = { workspace = true, features = ["default"] }
reth-rpc.workspace = true
reth-rpc-api.workspace = true
reth-rpc-layer.workspace = true
reth-rpc-types.workspace = true
reth-rpc-types-compat.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true

[dev-dependencies]
mockall.workspace = true
rand.workspace = true
strata-test-utils.workspace = true
