[package]
edition = "2021"
name = "strata-evmexec"
version = "0.3.0-alpha.1"

[dependencies]
alpen-reth-evm.workspace = true
alpen-reth-node.workspace = true
strata-db.workspace = true
strata-eectl.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true
strata-storage.workspace = true

alloy-network.workspace = true
alloy-rpc-types.workspace = true
anyhow.workspace = true
arbitrary.workspace = true
borsh.workspace = true
futures.workspace = true
http.workspace = true
hyper.workspace = true
jsonrpsee = { workspace = true, features = ["jsonrpsee-http-client"] }
reth-node-ethereum.workspace = true
reth-primitives = { workspace = true, features = [
  "alloy-compat",
  "serde-bincode-compat",
  "std",
] }
reth-rpc.workspace = true
reth-rpc-api.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-layer.workspace = true
reth-rpc-types-compat.workspace = true
revm-primitives.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true

[dev-dependencies]
mockall.workspace = true
rand.workspace = true
strata-test-utils.workspace = true
