[package]
edition = "2021"
name = "strata-key-derivation"
version = "0.1.0"

[lints]
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"

[dependencies]
bitcoin = { workspace = true, features = ["rand-std"] }
secp256k1.workspace = true
thiserror.workspace = true
zeroize = { workspace = true, optional = true }

[features]
default = ["zeroize"]
