[package]
edition = "2021"
name = "strata-l1tx"
version = "0.1.0"

[dependencies]
strata-bridge-tx-builder.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true

anyhow.workspace = true
arbitrary.workspace = true
bitcoin.workspace = true
borsh.workspace = true
hex.workspace = true
musig2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
strata-btcio = { workspace = true, features = ["test_utils"] }
strata-test-utils.workspace = true
