[package]
edition = "2021"
name = "strata-l1tx"
version = "0.1.0"

[dependencies]
strata-primitives.workspace = true
strata-state.workspace = true

anyhow.workspace = true
bitcoin.workspace = true
borsh.workspace = true
musig2.workspace = true
secp256k1.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
hex.workspace = true
strata-btcio = { workspace = true, features = ["test_utils"] }
strata-state = { workspace = true, features = ["test_utils"] }
strata-test-utils.workspace = true

[lints]
rust.unused_crate_dependencies = "deny"

[features]
test_utils = []
