[package]
edition = "2021"
name = "alpen-express-primitives"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
arbitrary.workspace = true
bincode.workspace = true
bitcoin = { workspace = true, features = ["serde", "rand-std"] }
borsh.workspace = true
digest.workspace = true
hex.workspace = true
musig2 = { workspace = true, features = ["serde"] }
rand = { workspace = true, optional = true }
reth-primitives.workspace = true
secp256k1 = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
alpen-test-utils.workspace = true

[features]
default = ["std", "rand"]
rand = ["std", "dep:rand"]
std = ["dep:secp256k1"]
