[package]
edition = "2021"
name = "strata-primitives"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
arbitrary.workspace = true
bincode.workspace = true
bitcoin = { workspace = true, features = ["serde", "rand-std"] }
bitcoin-bosd = { workspace = true, features = [
  "address",
  "serde",
  "borsh",
  "arbitrary",
] }
borsh.workspace = true
const-hex = "1.14"
digest.workspace = true
hex.workspace = true
k256 = { version = "0.13.4", features = ["schnorr"] }
musig2 = { workspace = true, features = ["serde"] }
num_enum.workspace = true
rand = { workspace = true, optional = true }
secp256k1 = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
zeroize.workspace = true
zkaleido.workspace = true

[dev-dependencies]
strata-test-utils.workspace = true

[features]
default = ["std", "rand"]
rand = ["std", "dep:rand"]
std = ["dep:secp256k1"]
