[package]
edition = "2021"
name = "alpen-express-rocksdb"
version = "0.1.0"

[dependencies]
alpen-express-db.workspace = true
alpen-express-mmr.workspace = true
alpen-express-primitives.workspace = true
alpen-express-state.workspace = true

anyhow.workspace = true
arbitrary.workspace = true
bincode.workspace = true
bitcoin.workspace = true
borsh.workspace = true
reth-db.workspace = true
rockbound.workspace = true
tempfile = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
alpen-test-utils.workspace = true

[features]
default = ["test_utils"]
test_utils = ["tempfile"]
