[package]
edition = "2021"
name = "strata-rocksdb"
version = "0.1.0"

[dependencies]
strata-db.workspace = true
strata-mmr.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true
zkaleido.workspace = true

anyhow.workspace = true
arbitrary.workspace = true
bincode.workspace = true
bitcoin.workspace = true
borsh.workspace = true
reth-db.workspace = true
rockbound.workspace = true
tempfile = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
strata-test-utils.workspace = true

[features]
default = ["test_utils"]
test_utils = ["tempfile"]
