[package]
edition = "2021"
name = "strata-sequencer"
version = "0.2.0"

[dependencies]
strata-chaintsn.workspace = true
strata-common.workspace = true
strata-consensus-logic.workspace = true
strata-db.workspace = true
strata-eectl.workspace = true
strata-l1tx.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true
strata-status.workspace = true
strata-storage.workspace = true
strata-tasks.workspace = true

anyhow.workspace = true
borsh.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zeroize.workspace = true

[dev-dependencies]
bitcoin.workspace = true
strata-key-derivation.workspace = true

[lints]
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[features]
debug-utils = ["strata-common/debug-utils"]
