[package]
edition = "2021"
name = "alpen-express-state"
version = "0.1.0"

# Note: Since we want to keep the core consensus logic generic, we shouldn't
# reuse much of reth in this crate so that we can factor it all out eventually.

[dependencies]

alpen-express-crypto = { workspace = true }
alpen-express-primitives = { workspace = true }
express-bridge-tx-builder = { workspace = true }
express-zkvm = { workspace = true }

arbitrary = { workspace = true }
bitcoin = { workspace = true }
borsh = { workspace = true }
digest = { workspace = true }
ethnum = "1.5.0"
hex = { workspace = true }
num_enum = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }   # ideally this shouldn't be in this trait


[dev-dependencies]
alpen-test-utils = { workspace = true }
rand = { workspace = true }
