[package]
edition = "2021"
name = "strata-state"
version = "0.1.0"

# Note: Since we want to keep the core consensus logic generic, we shouldn't
# reuse much of reth in this crate so that we can factor it all out eventually.

[dependencies]
strata-bridge-tx-builder.workspace = true
strata-crypto.workspace = true
strata-primitives.workspace = true
strata-zkvm.workspace = true

arbitrary.workspace = true
bitcoin.workspace = true
borsh.workspace = true
digest.workspace = true
ethnum = "1.5.0"
hex.workspace = true
serde.workspace = true
sha2.workspace = true
tracing.workspace = true   # ideally this shouldn't be in this crate


[dev-dependencies]
rand.workspace = true
strata-test-utils.workspace = true

[features]
test_utils = []
