[package]
edition = "2021"
name = "alpen-express-status"
version = "0.1.0"

[dependencies]
alpen-express-primitives = { workspace = true }
alpen-express-state = { workspace = true }
alpen-express-rpc-types = { workspace = true }

thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
