[package]
edition = "2021"
name = "strata-storage"
version = "0.3.0-alpha.1"

[dependencies]
strata-db.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true

anyhow.workspace = true
async-trait.workspace = true
bitcoin.workspace = true
lru.workspace = true
parking_lot.workspace = true
paste.workspace = true
threadpool.workspace = true
tokio.workspace = true
tracing.workspace = true
